--- a/src/app/components/califications/califications.component.html
+++ b/src/app/components/califications/califications.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-12 col-md-4">
           <div class="form-group">
-            <field-validator [targetField]="formCalification.controls.clfWrite">
+            <field-validator [targetField]="formCalification.controls.clfOral">
               <label for="formGroupExampleInput">Nota Oral :</label>
               <input #component_validator type="number" class="form-control" id="talk" placeholder="Ingrese nota de evaluacion oral." formControlName="clfOral">
             </field-validator>
