--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" routerLink="dollar">Calcular Dolar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Calcular Pasaje</a>
+        <a class="nav-link" routerLink="passage">Calcular Pasaje</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
