--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="passage">Calcular Pasaje</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" routerLink="text-message">Mensaje de Texto</a>
       </li>
     </ul>
   </div>
