--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,6 +17,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="text-message">Mensaje de Texto</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="test">Valoracion</a>
+        </li>
     </ul>
   </div>
 </nav>
